# pandoc

./: .gitignore  cabal.project  pandoc.cabal
pandoc-cli/: pandoc-cli.cabal
src/Text/: Pandoc.hs
src/Text/Pandoc/: App.hs  Citeproc.hs  Class.hs  Data.hs  Error.hs  ImageSize.hs  Options.hs  Readers.hs  SelfContained.hs  Shared.hs  Version.hs  Writers.hs
src/Text/Pandoc/App/: CommandLineOptions.hs
src/Text/Pandoc/Class/: CommonState.hs  IO.hs  PandocMonad.hs  PandocPure.hs
src/Text/Pandoc/Readers/: HTML.hs  Markdown.hs  RST.hs
src/Text/Pandoc/Writers/: HTML.hs  Shared.hs
