cabal-version:   2.4
name:            pandoc-lite
version:         3.1.2
build-type:      Simple
license:         GPL-2.0-or-later
license-file:    COPYING.md
copyright:       (c) 2006-2022 John MacFarlane
author:          John MacFarlane <jgm@berkeley.edu>
maintainer:      John MacFarlane <jgm@berkeley.edu>
bug-reports:     https://github.com/jgm/pandoc/issues
stability:       alpha
homepage:        https://pandoc.org
category:        Text
tested-with:     GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2,
                 GHC == 9.2.5, GHC == 9.4.4
synopsis:        Conversion between markup formats
description:     Pandoc is a Haskell library for converting from one markup
                 format to another.  The formats it can handle include
                 .
                 - light markup formats (many variants of Markdown,
                   reStructuredText, AsciiDoc, Org-mode, Muse, Textile,
                   txt2tags)
                 - HTML formats (HTML 4 and 5)
                 - Ebook formats (EPUB v2 and v3, FB2)
                 - Documentation formats (GNU TexInfo, Haddock)
                 - Roff formats (man, ms)
                 - TeX formats (LaTeX, ConTeXt)
                 - Typst
                 - XML formats (DocBook 4 and 5, JATS, TEI Simple, OpenDocument)
                 - Outline formats (OPML)
                 - Bibliography formats (BibTeX, BibLaTeX, CSL JSON, CSL YAML,
                   RIS)
                 - Word processor formats (Docx, RTF, ODT)
                 - Interactive notebook formats (Jupyter notebook ipynb)
                 - Page layout formats (InDesign ICML)
                 - Wiki markup formats (MediaWiki, DokuWiki, TikiWiki, TWiki,
                   Vimwiki, XWiki, ZimWiki, Jira wiki, Creole)
                 - Slide show formats (LaTeX Beamer, PowerPoint, Slidy,
                   reveal.js, Slideous, S5, DZSlides)
                 - Data formats (CSV and TSV tables)
                 - PDF (via external programs such as pdflatex or wkhtmltopdf)
                 .
                 Pandoc can convert mathematical content in documents
                 between TeX, MathML, Word equations, roff eqn, typst,
                 and plain text. It includes a powerful system for automatic
                 citations and bibliographies, and it can be customized extensively
                 using templates, filters, and custom readers and writers
                 written in Lua.
data-files:
                 -- templates
                 data/templates/styles.html
                 data/templates/styles.citations.html
                 data/templates/default.html4
                 data/templates/default.html5
                 data/templates/default.markdown
                 data/templates/default.commonmark
                 data/templates/default.plain
                 -- translations
                 data/translations/*.yaml
                 -- entities
                 data/docbook-entities.txt
                 -- default abbreviations file
                 data/abbreviations
                 -- bash completion template
                 data/bash_completion.tpl
                 -- documentation
                 MANUAL.txt, COPYRIGHT
extra-source-files:
                 -- documentation
                 INSTALL.md, AUTHORS.md, README.md,
                 CONTRIBUTING.md, BUGS, changelog.md,
                 man/pandoc.1
                 -- files needed to build man page
                 man/manfilter.lua
                 man/pandoc.1.before
                 man/pandoc.1.after
                 -- tests
                 test/bodybg.gif
                 test/*.native
                 test/command/*.md
                 test/command/*.csl
                 test/command/biblio.bib
                 test/command/averroes.bib
                 test/command/A.txt
                 test/command/B.txt
                 test/command/C.txt
                 test/command/D.txt
                 test/command/file1.txt
                 test/command/file2.txt
                 test/command/three.txt
                 test/command/01.csv
                 test/command/chap1/spider.png
                 test/command/chap2/spider.png
                 test/command/chap1/text.md
                 test/command/chap2/text.md
                 test/command/defaults1.yaml
                 test/command/defaults2.yaml
                 test/command/defaults3.yaml
                 test/command/defaults4.yaml
                 test/command/defaults5.yaml
                 test/command/defaults6.yaml
                 test/command/defaults7.yaml
                 test/command/defaults8.yaml
                 test/command/defaults9.yaml
                 test/command/3533-rst-csv-tables.csv
                 test/command/3880.txt
                 test/command/5182.txt
                 test/command/5700-metadata-file-1.yml
                 test/command/5700-metadata-file-2.yml
                 test/command/abbrevs
                 test/command/SVG_logo-without-xml-declaration.svg
                 test/command/SVG_logo.svg
                 test/command/corrupt.svg
                 test/command/inkscape-cube.svg
                 test/command/sub-file-chapter-1.tex
                 test/command/sub-file-chapter-2.tex
                 test/command/bar.tex
                 test/command/bar-endinput.tex
                 test/command/yaml-metadata.yaml
                 test/command/7813-meta.yaml
                 test/command/3510-subdoc.org
                 test/command/3510-export.latex
                 test/command/3510-src.hs
                 test/command/3971b.tex
                 test/command/5876.yaml
                 test/command/5876/metadata/5876.yaml
                 test/command/5876/metadata/command/5876.yaml
                 test/command/6466-beg.hs
                 test/command/6466-end.hs
                 test/command/6466-mid.hs
                 test/command/6466-whole.hs
                 test/command/7861.yaml
                 test/command/7861/metadata/placeholder
                 test/docbook-chapter.docbook
                 test/docbook-reader.docbook
                 test/docbook-xref.docbook
                 test/endnotexml-reader.xml
                 test/html-reader.html
                 test/opml-reader.opml
                 test/org-select-tags.org
                 test/haddock-reader.haddock
                 test/insert
                 test/lalune.jpg
                 test/man-reader.man
                 test/movie.jpg
                 test/media/rId25.jpg
                 test/media/rId26.jpg
                 test/media/rId27.jpg
                 test/latex-reader.latex
                 test/textile-reader.textile
                 test/markdown-reader-more.txt
                 test/markdown-citations.txt
                 test/textile-reader.textile
                 test/mediawiki-reader.wiki
                 test/vimwiki-reader.wiki
                 test/creole-reader.txt
                 test/rst-reader.rst
                 test/jats-reader.xml
                 test/jira-reader.jira
                 test/s5-basic.html
                 test/s5-fancy.html
                 test/s5-fragment.html
                 test/s5-inserts.html
                 test/tables.context
                 test/tables.docbook4
                 test/tables.docbook5
                 test/tables.jats_archiving
                 test/tables.jats_articleauthoring
                 test/tables.jats_publishing
                 test/tables.jira
                 test/tables.dokuwiki
                 test/tables.zimwiki
                 test/tables.icml
                 test/tables.html4
                 test/tables.html5
                 test/tables.latex
                 test/tables.man
                 test/tables.ms
                 test/tables.plain
                 test/tables.markdown
                 test/tables.markua
                 test/tables.mediawiki
                 test/tables.tei
                 test/tables.textile
                 test/tables.opendocument
                 test/tables.org
                 test/tables.asciidoc
                 test/tables.asciidoctor
                 test/tables.haddock
                 test/tables.texinfo
                 test/tables.typst
                 test/tables.rst
                 test/tables.rtf
                 test/tables.txt
                 test/tables.fb2
                 test/tables.muse
                 test/tables.xwiki
                 test/tables/*.html4
                 test/tables/*.html5
                 test/tables/*.latex
                 test/tables/*.native
                 test/tables/*.mediawiki
                 test/tables/*.jats_archiving
                 test/testsuite.txt
                 test/writer.latex
                 test/writer.context
                 test/writer.docbook4
                 test/writer.docbook5
                 test/writer.jats_archiving
                 test/writer.jats_articleauthoring
                 test/writer.jats_publishing
                 test/writer.jira
                 test/writer.html4
                 test/writer.html5
                 test/writer.man
                 test/writer.ms
                 test/writer.markdown
                 test/writer.markua
                 test/writer.plain
                 test/writer.mediawiki
                 test/writer.textile
                 test/writer.typst
                 test/writer.opendocument
                 test/writer.org
                 test/writer.asciidoc
                 test/writer.asciidoctor
                 test/writer.haddock
                 test/writer.rst
                 test/writer.icml
                 test/writer.rtf
                 test/writer.tei
                 test/writer.texinfo
                 test/writer.fb2
                 test/writer.opml
                 test/writer.dokuwiki
                 test/writer.zimwiki
                 test/writer.xwiki
                 test/writer.muse
                 test/writers-lang-and-dir.latex
                 test/writers-lang-and-dir.context
                 test/dokuwiki_inline_formatting.dokuwiki
                 test/lhs-test.markdown
                 test/lhs-test.markdown+lhs
                 test/lhs-test.rst
                 test/lhs-test.rst+lhs
                 test/lhs-test.latex
                 test/lhs-test.latex+lhs
                 test/lhs-test.html
                 test/lhs-test.html+lhs
                 test/lhs-test.fragment.html+lhs
                 test/pipe-tables.txt
                 test/dokuwiki_external_images.dokuwiki
                 test/dokuwiki_multiblock_table.dokuwiki
                 test/fb2/*.markdown
                 test/fb2/*.fb2
                 test/fb2/images-embedded.html
                 test/fb2/images-embedded.fb2
                 test/fb2/test-small.png
                 test/fb2/reader/*.fb2
                 test/fb2/reader/*.native
                 test/fb2/test.jpg
                 test/docx/*.docx
                 test/docx/golden/*.docx
                 test/docx/*.native
                 test/epub/*.epub
                 test/epub/*.native
                 test/rtf/*.native
                 test/rtf/*.rtf
                 test/pptx/*.pptx
                 test/pptx/**/*.pptx
                 test/pptx/**/*.native
                 test/ipynb/*.native
                 test/ipynb/*.in.native
                 test/ipynb/*.out.native
                 test/ipynb/*.ipynb
                 test/ipynb/*.out.ipynb
                 test/ipynb/*.out.html
                 test/txt2tags.t2t
                 test/twiki-reader.twiki
                 test/tikiwiki-reader.tikiwiki
                 test/odt/odt/*.odt
                 test/odt/markdown/*.md
                 test/odt/native/*.native
source-repository head
  type:          git
  location:      git://github.com/jgm/pandoc.git

flag embed_data_files
  Description:   Embed data files in binary for relocatable executable.
  Default:       False

common common-options
  default-language: Haskell2010
  build-depends:    base         >= 4.12 && < 5
  ghc-options:      -Wall -fno-warn-unused-do-bind
                    -Wincomplete-record-updates
                    -Wnoncanonical-monad-instances
                    -Wcpp-undef
                    -Wincomplete-uni-patterns
                    -Widentities
                    -Wpartial-fields
                    -Wmissing-signatures
                    -fhide-source-paths
                    -- -Wmissing-export-lists

  if impl(ghc >= 8.10)
    ghc-options:    -Wunused-packages

  if impl(ghc >= 9.0)
    ghc-options:    -Winvalid-haddock

  if os(windows)
    cpp-options:      -D_WINDOWS

common common-executable
  import:           common-options
  build-depends:    pandoc
  ghc-options:      -rtsopts -with-rtsopts=-A8m -threaded

library
  import:        common-options
  build-depends:
                 Glob                  >= 0.7      && < 0.11,
                 JuicyPixels           >= 3.1.6.1  && < 3.4,
                 SHA                   >= 1.6      && < 1.7,
                 aeson                 >= 2.0.1.0  && < 2.2,
                 aeson-pretty          >= 0.8.9    && < 0.9,
                 array                 >= 0.5      && < 0.6,
                 attoparsec            >= 0.12     && < 0.15,
                 binary                >= 0.7      && < 0.11,
                 blaze-html            >= 0.9      && < 0.10,
                 blaze-markup          >= 0.8      && < 0.9,
                 bytestring            >= 0.9      && < 0.12,
                 commonmark            >= 0.2.2    && < 0.3,
                 commonmark-extensions >= 0.2.3.4  && < 0.3,
                 commonmark-pandoc     >= 0.2.1.3  && < 0.3,
                 containers            >= 0.6.0.1  && < 0.7,
                 data-default          >= 0.4      && < 0.8,
                 deepseq               >= 1.3      && < 1.5,
                 directory             >= 1.2.3    && < 1.4,
                 doclayout             >= 0.4.0.1  && < 0.5,
                 doctemplates          >= 0.11     && < 0.12,
                 base64                >= 0.4      && < 0.5,
                 emojis                >= 0.1      && < 0.2,
                 exceptions            >= 0.8      && < 0.11,
                 file-embed            >= 0.0      && < 0.1,
                 filepath              >= 1.1      && < 1.5,
                 gridtables            >= 0.1      && < 0.2,
                 http-types            >= 0.8      && < 0.13,
                 mime-types            >= 0.1.1    && < 0.2,
                 mtl                   >= 2.2      && < 2.4,
                 network-uri           >= 2.6      && < 2.8,
                 pandoc-types          >= 1.23     && < 1.24,
                 parsec                >= 3.1      && < 3.2,
                 pretty                >= 1.1      && < 1.2,
                 pretty-show           >= 1.10     && < 1.11,
                 process               >= 1.2.3    && < 1.7,
                 random                >= 1        && < 1.3,
                 safe                  >= 0.3.18   && < 0.4,
                 split                 >= 0.2      && < 0.3,
                 syb                   >= 0.1      && < 0.8,
                 tagsoup               >= 0.14.6   && < 0.15,
                 texmath               >= 0.12.7   && < 0.13,
                 text                  >= 1.1.1.0  && < 2.1,
                 text-conversions      >= 0.3      && < 0.4,
                 time                  >= 1.5      && < 1.14,
                 unicode-collation     >= 0.1.1    && < 0.2,
                 unicode-transforms    >= 0.3      && < 0.5,
                 yaml                  >= 0.11     && < 0.12,
                 zip-archive           >= 0.4.3    && < 0.5,
                 zlib                  >= 0.5      && < 0.7,
                 xml                   >= 1.3.12   && < 1.4

  if flag(embed_data_files)
     cpp-options:   -DEMBED_DATA_FILES
     other-modules: Text.Pandoc.Data.BakedIn
  hs-source-dirs:  src

  exposed-modules: Text.Pandoc,
                   Text.Pandoc.Data,
                   Text.Pandoc.Options,
                   Text.Pandoc.Extensions,
                   Text.Pandoc.Format,
                   Text.Pandoc.Shared,
                   Text.Pandoc.Sources,
                   Text.Pandoc.MediaBag,
                   Text.Pandoc.Error,
                   Text.Pandoc.Translations,
                   Text.Pandoc.Translations.Types,
                   Text.Pandoc.Readers,
                   Text.Pandoc.Readers.HTML,
                   Text.Pandoc.Readers.Markdown,
                   Text.Pandoc.Readers.CommonMark,
                   Text.Pandoc.Readers.RST,
                   Text.Pandoc.Readers.Native,
                   Text.Pandoc.Writers,
                   Text.Pandoc.Writers.Native,
                   Text.Pandoc.Writers.HTML,
                   Text.Pandoc.Writers.Markdown,
                   Text.Pandoc.Writers.CommonMark,
                   Text.Pandoc.Writers.Math,
                   Text.Pandoc.Writers.Shared,
                   Text.Pandoc.Writers.AnnotatedTable,
                   Text.Pandoc.UTF8,
                   Text.Pandoc.Slides,
                   Text.Pandoc.Templates,
                   Text.Pandoc.XML,
                   Text.Pandoc.Logging,
                   Text.Pandoc.Process,
                   Text.Pandoc.MIME,
                   Text.Pandoc.Parsing,
                   Text.Pandoc.Asciify,
                   Text.Pandoc.Emoji,
                   Text.Pandoc.ImageSize,
                   Text.Pandoc.Class,
                   Text.Pandoc.Class.IO,
                   Text.Pandoc.Chunks,
                   Text.Pandoc.Version
  other-modules:   Text.Pandoc.Class.CommonState,
                   Text.Pandoc.Class.PandocMonad,
                   Text.Pandoc.Class.PandocIO,
                   Text.Pandoc.Class.PandocPure,
                   Text.Pandoc.Class.Sandbox,
                   Text.Pandoc.Parsing.Capabilities,
                   Text.Pandoc.Parsing.Citations,
                   Text.Pandoc.Parsing.General,
                   Text.Pandoc.Parsing.GridTable,
                   Text.Pandoc.Parsing.Lists,
                   Text.Pandoc.Parsing.Math,
                   Text.Pandoc.Parsing.Smart,
                   Text.Pandoc.Parsing.State,
                   Text.Pandoc.Parsing.Future,
                   Text.Pandoc.Readers.HTML.Parsing,
                   Text.Pandoc.Readers.HTML.Table,
                   Text.Pandoc.Readers.HTML.TagCategories,
                   Text.Pandoc.Readers.HTML.Types,
                   Text.Pandoc.Readers.Metadata,
                   Text.Pandoc.Writers.GridTable
                   Text.Pandoc.Writers.Markdown.Table,
                   Text.Pandoc.Writers.Markdown.Types,
                   Text.Pandoc.Writers.Markdown.Inline,
                   Text.Pandoc.Writers.Blaze,
                   Text.Pandoc.TeX,
                   Text.Pandoc.URI,
                   Text.Pandoc.CSS,
                   Text.Pandoc.CSV,
                   Text.Pandoc.UUID,
                   Text.Pandoc.Image,
                   Paths_pandoc_lite
  autogen-modules: Paths_pandoc_lite
  buildable:       True

test-suite test-pandoc
  import:         common-executable
  type:           exitcode-stdio-1.0
  main-is:        test-pandoc.hs
  hs-source-dirs: test
  build-depends:  pandoc-lite,
                  Diff              >= 0.2     && < 0.5,
                  Glob              >= 0.7     && < 0.11,
                  bytestring        >= 0.9     && < 0.12,
                  containers        >= 0.4.2.1 && < 0.7,
                  directory         >= 1.2.3   && < 1.4,
                  doctemplates      >= 0.11    && < 0.12,
                  filepath          >= 1.1     && < 1.5,
                  mtl               >= 2.2     && < 2.4,
                  pandoc-types      >= 1.23    && < 1.24,
                  process           >= 1.2.3   && < 1.7,
                  tasty             >= 0.11    && < 1.5,
                  tasty-golden      >= 2.3     && < 2.4,
                  tasty-hunit       >= 0.9     && < 0.11,
                  tasty-quickcheck  >= 0.8     && < 0.11,
                  text              >= 1.1.1.0 && < 2.1,
                  time              >= 1.5     && < 1.14,
                  xml               >= 1.3.12  && < 1.4,
                  zip-archive       >= 0.4.3   && < 0.5
  other-modules:  Tests.Old
                  Tests.Command
                  Tests.Helpers
                  Tests.Shared
                  Tests.Readers.LaTeX
                  Tests.Readers.HTML
                  Tests.Readers.JATS
                  Tests.Readers.Jira
                  Tests.Readers.Markdown
                  Tests.Readers.Org
                  Tests.Readers.Org.Block
                  Tests.Readers.Org.Block.CodeBlock
                  Tests.Readers.Org.Block.Figure
                  Tests.Readers.Org.Block.Header
                  Tests.Readers.Org.Block.List
                  Tests.Readers.Org.Block.Table
                  Tests.Readers.Org.Directive
                  Tests.Readers.Org.Inline
                  Tests.Readers.Org.Inline.Citation
                  Tests.Readers.Org.Inline.Note
                  Tests.Readers.Org.Inline.Smart
                  Tests.Readers.Org.Meta
                  Tests.Readers.Org.Shared
                  Tests.Readers.RST
                  Tests.Readers.RTF
                  Tests.Readers.Txt2Tags
                  Tests.Readers.EPUB
                  Tests.Readers.Muse
                  Tests.Readers.Creole
                  Tests.Readers.Man
                  Tests.Readers.FB2
                  Tests.Readers.DokuWiki
                  Tests.Writers.Native
                  Tests.Writers.ConTeXt
                  Tests.Writers.DocBook
                  Tests.Writers.HTML
                  Tests.Writers.JATS
                  Tests.Writers.Jira
                  Tests.Writers.Markdown
                  Tests.Writers.Org
                  Tests.Writers.Plain
                  Tests.Writers.AsciiDoc
                  Tests.Writers.LaTeX
                  Tests.Writers.Docx
                  Tests.Writers.RST
                  Tests.Writers.TEI
                  Tests.Writers.Markua
                  Tests.Writers.Muse
                  Tests.Writers.FB2
                  Tests.Writers.Powerpoint
                  Tests.Writers.OOXML
                  Tests.Writers.Ms
                  Tests.Writers.AnnotatedTable

benchmark benchmark-pandoc
  import:          common-executable
  type:            exitcode-stdio-1.0
  main-is:         benchmark-pandoc.hs
  hs-source-dirs:  benchmark
  build-depends:   bytestring,
                   tasty-bench >= 0.2     && <= 0.4,
                   mtl         >= 2.2     && < 2.4,
                   text        >= 1.1.1.0 && < 2.1,
                   deepseq
  -- we increase heap size to avoid benchmarking garbage collection:
  ghc-options:     -rtsopts -with-rtsopts=-A8m -threaded
